fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ body {
   height: 2em;
   text-align: center;
   margin: auto;
+  margin-top: 1em;
 }
 
 .row {
@@ -58,6 +59,7 @@ body {
   display: block;
   margin: auto;
   margin-top: 2em;
+  margin-bottom: 1em;
   padding: 1em;
   background-color:  crimson;
   height: 20em;
